# image-to-pptx-ai

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: README.md
scripts/: create_demo_image.py
src/image_to_pptx_ai/: __init__.py  analyzer.py  cli.py  colors.py  models.py  renderer.py
tests/: test_colors.py  test_models.py
