[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "image-to-pptx-ai"
version = "0.1.0"
description = "Generate PowerPoint slides from an input image using local image analysis or OpenAI vision models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
keywords = ["pptx", "powerpoint", "image", "vision", "presentation", "openai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics :: Presentation",
]
dependencies = [
  "openai>=1.82.0",
  "pillow>=10.0.0",
  "python-pptx>=1.0.2",
  "pydantic>=2.7.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
image-to-pptx = "image_to_pptx_ai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/image_to_pptx_ai"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

